Fix width overflow, remove space background pos

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,8 @@ html {
 
 body {
   background-color: #fafafa;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 main {
@@ -41,7 +43,6 @@ section {
   width: 100%;
   background-image: url("../images/space.png");
   background-size: auto;
-  background-position: center;
   position: relative;
 }
 
@@ -52,7 +53,6 @@ section {
   align-items: center;
   align-content: flex-start;
   flex-wrap: no-wrap;
-  overflow: hidden;
   margin-bottom: 0px;
   /* border for testing 
   border: 6px solid #fff;
